[package]
name = "mb-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "4.0.0-pre.7"

[dependencies.near_events]
git = "https://github.com/mintbase/near-events"
rev = "bd78dcaeaa11f6f6286bbbed97d835370783c30b"

[features]
ser = ["near_events/ser"]
de = ["near_events/de"]
all = ["ser", "de"]
